# songbird

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  tailwind.config.js
home/: models.py  widgets.py
home/migrations/: 0003_homepage_widgets.py  0004_alter_homepage_widgets.py  0005_alter_homepage_widgets.py  0006_alter_homepage_widgets.py
nginx/: Dockerfile  nginx.conf
songbird/: settings.py  urls.py  wsgi.py
songbird/settings/: base.py  dev.py
songbird/static/css/: style.css
songbird/static/js/: gradient.js
songbird/templates/: background.html  base.html
songbird/templates/home/: home_page.html
songbird/templates/home/widgets/: biography_card_widget.html  calendar_widget.html  links_widget.html  tab_widget.html  task_list_widget.html  video_widget.html
templates/: base.html
theme/: style.css
