[tool.poetry]
name = "songbird"
version = "0.2.3"
description = ""
authors = ["daniarlert <arlertdaniel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "^5.0.2"
django = "^4.2.3"
django-debug-toolbar = "^4.1.0"
environs = {extras = ["django"], version = "^9.5.0"}
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"
psycopg = {extras = ["binary"], version = "^3.1.9"}
django-browser-reload = "^1.11.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
commitizen = "^3.5.2"
djhtml = "^3.0.6"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
